[package]
name = "parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thin-vec = "0.2.12"
raccoon_lexer = { path = "../lexer" }
raccoon_ast = { path = "../ast" }
raccoon_span = { path = "../span" }
